--- a/nginx.conf
+++ b/nginx.conf
@@ -15,7 +15,7 @@ server {
         # Прокси для запросов, приходящих по /api/api/
         location /api/api/ {
             rewrite ^/api/api/(.*)$ /api/$1 break;
-            proxy_pass http://django_app:8000;
+            proxy_pass http://web:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -24,7 +24,7 @@ server {
 
         # Прокси для остальных запросов
         location / {
-            proxy_pass http://django_app:8000;
+            proxy_pass http://web:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
